--- a/src/Makefile
+++ b/src/Makefile
@@ -1,37 +1,21 @@
-# Makefile de compilation- 02/03/2017
-include .config
-
+SHELL   = /bin/bash
+CC      = gcc
 MKDEP   = gcc -MM
 RM      = rm -f
-
-# Si vous voulez utiliser gdb, rajouter "-g" a la fin de CFLAGS ;
-# Si vous utilisez des fonctions de <math.h>, rajoutez "-lm" a la fin de LIBS.
-CFLAGS  =-Wall -std=c99 -g
-LIBS    = 
-
-# Mettre ici la liste des fichiers .c separes par un espace ;
-# si besoin on peut eclater la liste sur plusieurs lignes avec "\".
-CFILES  = main.c railwayNetwork.c trace.c util.c dijkstra.c generate.c
+CFLAGS = -Wall -std=c99 -g
+LIBS   =
+CFILES  = main.c railwayNetwork.c trace.c util.c tas.c trajet.c moyenne.c distance.c cluster.c dijkstra.c
 
 # Mettre ici le nom de l'executable.
-EXEC    = projet
+EXEC    = dijkstra
 
 # Calcul automatique de la liste des fichiers ".o" a partir de CFILES.
 OBJECTS := $(CFILES:%.c=%.o)
 
-ifdef HAS_GNUMAKE
-%.o : %.c 
-	$(CC) $(CPATHS) $(CFLAGS) -c $*.c
-else
-.c.o :
-	$(CC) $(CPATHS) $(CFLAGS) -c $*.c
-endif
+%.o : %.c
+	$(CC) $(CFLAGS) -c $*.c
 
 all :: $(EXEC)
-	@if [ ! -d $(INSTALL_DIR) ];then \
-		mkdir $(INSTALL_DIR); \
-	fi
-	@cp $(EXEC) $(INSTALL_DIR)
 
 $(EXEC) : $(OBJECTS)
 	$(CC) -o $@ $^ $(LIBS)
@@ -46,5 +30,12 @@ depend : *.c *.h
 # Le "-" devant include supprime l'erreur si le fichier est absent.
 -include depend
 
-distclean : clean
-	configure -z
+tar :: clean
+	@N=$$(pwd) ; N=$$(basename "$$N") ;\
+	(cd .. && tar cvfz "$$N.tgz" "$$N" --exclude='svg*' --exclude='*.tgz' --exclude='*.zip' && \
+	 echo "DONE ../$$N.tgz")
+	 
+zip :: clean
+	@N=$$(pwd) ; N=$$(basename "$$N") ;\
+	(cd .. && zip -r "$$N.zip" "$$N" --exclude='svg*' --exclude='*.tgz' --exclude='*.zip' && \
+	echo "DONE ../$$N.zip")
